1. Метод .of [#446723]